--- a/views/index.pug
+++ b/views/index.pug
@@ -1,9 +1,8 @@
 extends layout
 
 block content
-  h1= title
-  
-  .container    
+  .container 
+    h1.text-center All Polls
     .row
       each poll in polls
         .col-md-4.text-center
