--- a/views/poll.pug
+++ b/views/poll.pug
@@ -2,8 +2,8 @@ extends layout
 
 block content
   block content
-    h1= poll.name
-    .container    
+    .container 
+      h1.text-center= poll.name
       .row
         .col-md-4.col-md-offset-2
           canvas#skills(width='300', height='300')
@@ -15,6 +15,8 @@ block content
                 +radio(i, poll.options[i].optionName)
                 p= poll.options[i].votes
             button.btn.btn-default.center-block(type='submit') Vote!
+    script(src='/javascripts/Chart.min.js')
+    script(src='/javascripts/createchart.js')
       
 mixin radio(value, name)
   input(type='radio', name='option', value=value)
