--- a/views/poll.pug
+++ b/views/poll.pug
@@ -4,20 +4,28 @@ block content
   block content
     .container 
       h1.text-center= poll.name
-      .row
-        .col-md-4.col-md-offset-2
+      .row.margin
+        .col-sm-4.col-sm-offset-2
           canvas#skills(width='300', height='300')
-        .col-md-4
-          form.options(method="post" action="/vote")
-            input(type="hidden" name="pollid" value=poll.id)
-            - if (poll.options.length)
-              -for (var i = 0; i < poll.options.length; i++)
-                +radio(i, poll.options[i].optionName)
-                p= poll.options[i].votes
-            button.btn.btn-default.center-block(type='submit') Vote!
+        .col-sm-4.voting-choices
+          .panel.panel-default
+            .panel-body
+              - if (!voted)
+                form.options(method="post" action="/vote")
+                  input(type="hidden" name="pollid" value=poll.id)
+                  - if (poll.options.length)
+                    .choice
+                      -for (var i = 0; i < poll.options.length; i++)
+                          +radio(i, ' '+poll.options[i].optionName)
+                  button.btn.btn-default.center-block(type='submit') Vote!
+              - else
+                p You have already voted on this poll!
     script(src='/javascripts/Chart.min.js')
     script(src='/javascripts/createchart.js')
       
 mixin radio(value, name)
-  input(type='radio', name='option', value=value)
-  !=name
+  p
+    input(type='radio', name='option', value=value)
+    !=  name
+
+  
