Fixing sharing feature.

--- a/views/mypolls.pug
+++ b/views/mypolls.pug
@@ -10,9 +10,9 @@ block content
             .panel-heading
               a(href='/poll?pollid='+poll.id)= poll.name
             .panel-body
-              a.btn.btn-primary.margin(roll='button' href='http://www.facebook.com/sharer.php?u=https://pollify-beaucarnes.c9users.io/poll?pollid='+poll.id)
+              a.btn.btn-primary.margin(roll='button' href='http://www.facebook.com/sharer.php?u=https://pollify-bc.herokuapp.com/poll?pollid='+poll.id)
                 i.fa.fa-facebook
-              a.btn.btn-info.margin(roll='button' href='https://twitter.com/intent/tweet?text=Check%20out%20my%20poll%20at%20Pollify!&url=https://pollify-beaucarnes.c9users.io/poll?pollid=581df2726e6b09007431af24'+poll.id+'&hashtags=Pollify')
+              a.btn.btn-info.margin(roll='button' href='https://twitter.com/intent/tweet?text=Check%20out%20my%20poll%20at%20Pollify!&url=https://pollify-bc.herokuapp.com/poll?pollid=581df2726e6b09007431af24'+poll.id+'&hashtags=Pollify')
                 i.fa.fa-twitter
               a.btn.btn-danger.margin(roll='button' onclick="return confirm('Are you sure you want to delete the poll?')" href='/poll/delete?pollid='+poll.id)
                 i.fa.fa-trash 
