Add multiline placeholder text

--- a/views/new.pug
+++ b/views/new.pug
@@ -12,7 +12,7 @@ block content
         .form-group
           label.col-md-4.control-label(for='options') Options (separated by line)
           .col-md-5
-            textarea#options.form-control(name='options' rows='4' placeholder='First choice\nSecond choice' required)
+            textarea#options.form-control(name='options' rows='4' placeholder='First option\nSecond option' required)
         .text-center
           button.btn.btn-default.center-block(type='submit') Create!
     script(src='/javascripts/placeholder.js')
